cmake_minimum_required(VERSION 3.10)
project(TIRAMISU_TEST)
find_package(OpenMP)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++11 -O0 -pthread -g -mavx2")
if (OPENMP_FOUND)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
set(TIRAMISU_HOME $ENV{TIRAMISU_HOME})
include_directories("${TIRAMISU_HOME}/include")
include_directories("${TIRAMISU_HOME}/include/auto_scheduler")
include_directories("${TIRAMISU_HOME}/3rdParty/isl/build/include")
include_directories("${TIRAMISU_HOME}/3rdParty/Halide/include")
link_directories("${TIRAMISU_HOME}/build")
link_directories("${TIRAMISU_HOME}/3rdParty/isl/build/lib")
link_directories("${TIRAMISU_HOME}/3rdParty/Halide/lib")
add_executable(main "src/generate_matmul.cpp")
target_link_libraries(main tiramisu isl Halide dl pthread)
